Fix too big for their britches images

--- a/assets/css/sfwp2l-admin.css
+++ b/assets/css/sfwp2l-admin.css
@@ -1,1 +1,6 @@
 th{text-align:left;}
+
+img{
+	max-width: 100%;
+	height: auto;
+}
